# coffee

./: .gitattributes  .gitignore
klick/: CMakeLists.txt  package.xml
klick/src/: fake_order_coffee_launch.launch  gripper_control.py  joint_check.py  makecoffee.py  move_pose_gripper.py  order_coffee.py  order_coffee_launch.launch  order_pose_client.py  order_pose_server.py  order_server_without_gripper.py  set_pose.py  set_value.py  slider.py
klick/srv/: GripperControl.srv  OrderPose.srv
mycobot_ros/: CHANGELOG.rst
mycobot_ros/mycobot_320/new_mycobot_320/launch/: mycobot_320_gripper_slider.launch
mycobot_ros/mycobot_320/new_mycobot_320_gripper_moveit/: testpub.py
mycobot_ros/mycobot_320/new_mycobot_320_gripper_moveit/config/: firefighter.srdf
mycobot_ros/mycobot_320/new_mycobot_320_gripper_moveit/launch/: moveit.rviz
mycobot_ros/mycobot_320/new_mycobot_320_moveit/launch/: moveit.rviz
mycobot_ros/mycobot_description/urdf/mycobot_320_m5_2022/: camera.dae  gleft.dae  gleftv1.dae  gright.dae  grightv1.dae  hotcup.dae  icecup.dae  new_mycobot_pro_320_m5_2022_gripper.urdf  new_mycobot_pro_320moveit_m5_2022.urdf  shotcup.dae  table.dae  tablev1.dae  tablev2.dae  tablev3.dae  tablev4.dae  tablev5.dae  tablev6.dae  tablev7.dae
